<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCuisineCategoriesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cuisine_categories_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCuisines"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tvCuisineCategoriesLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="3"
        tools:listitem="@layout/item_cuisine_card" />

    <TextView
        android:id="@+id/tvTopDishesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/top_dishes_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCuisines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTopDishes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/tvTopDishesLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="3"
        tools:listitem="@layout/item_dish_tile" />

    <Button
        android:id="@+id/btnCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_cart"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnLanguage" />

    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_button"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>